bluez-utils config module and script set

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -44,6 +44,9 @@ tooltip label {
 #network {
   color: @main-color;
 }
+#bluetooth {
+  color: @main-color;
+}
 #workspaces {
   margin: 4px 4px;
   background: alpha(@background, 0.5);
